--- a/css/style.css
+++ b/css/style.css
@@ -279,6 +279,12 @@ body {
 
 
 /* About Media queries */
+@media (max-width:1325px) {
+  .Acard{
+    width: 400px;
+    height: 400px;
+  }
+}
 @media(max-width:980px){
 
 
