--- a/css/style.css
+++ b/css/style.css
@@ -228,8 +228,8 @@ body {
 }
 .Acard{
   box-shadow: 3px 4px 3px 3px gray;
-  width: 300px;
-  height: 300px;
+  width: 420px;
+  height: 420px;
   border-radius: 10px;
   transition: all 1s ease-out;
   animation: rotates 7s ease-in-out;
@@ -266,7 +266,7 @@ body {
 
 .about-text p{
   font-family: sans-serif;
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .logos{
@@ -292,9 +292,26 @@ body {
     height: 400px;
   }
 }
+
+@media (max-width:1200px) {
+  .aboutCard{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+    grid-gap: 20px;
+  }
+
+  .Acard{
+    width: 310px;
+    height: 310px;
+  }
+
+  .about-text p{
+    font-size: 16px;
+  }
+}
+
 @media(max-width:980px){
-
-
   .aboutCard{ 
     display: grid;
     grid-template-columns: repeat(2, 1fr);
